# aihc_hw8_high_risk_project_ej8387

./: .gitignore  Procfile  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  dump.rdb  high_risk_project_presentation_ej8387.md  high_risk_project_presentation_eje8387.md  llm_plugins.json  project_prompt.md  pyproject.toml  rubric_high_risk_project.md  stop_web_app.sh  web_app_description.md  web_app_prompt.md
adherence_web_app/: Brewfile  celery_app.py  dump.rdb  llm_plugins.json  manage.py  pyproject.toml
adherence_web_app/adherence_core/: asgi.py  settings.py  urls.py  wsgi.py
adherence_web_app/reminders/: admin.py  forms.py  llm_prompts.py  models.py  tasks.py  urls.py  views.py
adherence_web_app/reminders/migrations/: 0001_initial.py  0002_auto_20250421_1954.py  0003_medicationregime_natural_language_description_and_more.py  0004_circlemember_prescriptions_description.py  0005_prescription_circle_member.py  0006_alter_prescription_prescriber_and_more.py  0007_prescription_time_of_day.py
adherence_web_app/reminders/templates/: dashboard.html  edit_circle_member.html  profile.html
adherence_web_app/reminders/templates/registration/: register.html
adherence_web_app/templates/: base.html  dashboard.html  home.html
adherence_web_app/templates/registration/: logged_out.html  login.html
adherence_web_app/theme/static_src/: package-lock.json
adherence_web_app/theme/static_src/src/: styles.css
report_latex/evan_jones_high_risk_project_ej8387/: evan_jones_bib.bib  evan_jones_high_risk_project_ej8387.tex
