[project]
name = "adherence-web-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "django-browser-reload>=1.18.0",
    "django-tailwind>=4.0.1",
    "ipython>=9.0.2",
    "python-dotenv>=1.1.0",
]
