[project]
name = "adherence-web-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "django-browser-reload>=1.18.0",
    "django-tailwind[reload]>=4.0.1",
    "ipython>=9.0.2",
    "python-dotenv>=1.1.0",
    "cookiecutter>=2.6.0",
    "llm>=0.24.2",
    "returns>=0.25.0",
    "celery>=5.5.1",
    "redis>=5.2.1",
    "django-celery-beat>=2.8.0",
    "honcho>=2.0.0",
]
